# q-aware-to-tflite

./: .gitignore  README.md  main.py  pyproject.toml
