[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantize-aware-tflite"
version = "0.1.0"
description = "Example of PyTorch to quantized TFLite conversion using Nobuco and PTQ"
readme = "README.md" # Optional: Add a README file later
requires-python = ">=3.10,<3.11"

dependencies = [
    "tensorflow == 2.15.0",
    "tf-keras == 2.15.0",
    "tensorflow-probability == 0.22.1",
    "numpy < 2.0", # Pin to < 2.0 for TF 2.15 compatibility
    "h5py", # Version resolved by installer
    "torch", # Version resolved by installer
    "onnx == 1.17.0",
    "onnx2tf == 1.27.2",
    "onnx-graphsurgeon == 0.5.8",
    "psutil == 7.0.0",
    "ai-edge-litert == 1.2.0",
    "sng4onnx == 1.0.4",
]

# Removed old Nobuco/TF-Metal/Torchvision dependencies
